--- a/views/partials/more-option.ejs
+++ b/views/partials/more-option.ejs
@@ -2,13 +2,17 @@
   <ul>
     <li>
       <a href="/profile">
-        <%- include("./icons/profile-svg.ejs"); -%>
+        <div class="more-icon">
+          <%- include("./icons/profile-svg.ejs"); -%>
+        </div>
         <span>Profile</span>
       </a>
     </li>
     <li>
       <a href="/logout">
-        <%- include("./icons/logout-svg.ejs"); -%>
+        <div class="more-icon">
+          <%- include("./icons/logout-svg.ejs"); -%>
+        </div>
         <span>Logout</span>
       </a>
     </li>
