--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="logo-content">
     <div class="logo">
-      <img src="/icons/logo.svg" alt="" />
+     <a href="/"> <img src="/icons/logo.svg" alt="" /></a>
     </div>
   </div>
   <ul class="nav-list">
