--- a/views/partials/icons/logout-svg.ejs
+++ b/views/partials/icons/logout-svg.ejs
@@ -1,16 +1,1 @@
-<svg
-  width="18"
-  height="18"
-  viewBox="0 0 18 18"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <path
-    d="M8.78011 16.3333C4.72844 16.3333 1.44678 13.5833 1.44678 8.99996C1.44678 4.41663 4.72844 1.66663 8.78011 1.66663M13.9868 11.4016L16.3334 9.05496L13.9868 6.70829V11.4016ZM6.94678 9.05496H16.2693H6.94678Z"
-    stroke="#565C7D"
-    stroke-width="2"
-    stroke-miterlimit="10"
-    stroke-linecap="round"
-    stroke-linejoin="round"
-  />
-</svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path  stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="M17.44 14.62L20 12.06 17.44 9.5M9.76 12.06h10.17M11.76 20c-4.42 0-8-3-8-8s3.58-8 8-8"></path></svg>
