--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -5,18 +5,29 @@
     justify-content: space-between;
     margin-top: 20px;
   }
-
+.date-range-input-container{
+  background: #f3f3f3;
+  border-radius: 8px;
+  padding: 5px 10px;
+  height: 45px;
+}
   .date-input{
-  width: 250px;
-  height: 40px;
-  padding: 6px;
-  margin: 12px 0px;
+  background: #f3f3f3;
+  width: 150px;
+  padding:  6px;
   font-size: 16px;
   font-weight: 400;
   color: #5E5E5E;
-  border: 1px solid #EAEEF4;
-  border-radius: 12px;
-  text-align: center;
+  border: none;
+  outline: none;
+  /* border: 1px solid #EAEEF4;
+  border-radius: 12px; */
+  text-align: left;
+}
+.date-input:focus, input[type="data"]:focus{
+  border: none;
+  outline: none !important;
+
 }
 .report-title-container{
   margin-top: 8px;
@@ -72,6 +83,7 @@
 .date-to{
   font-size: 16px;
   font-weight: 500;
+  padding-top:  6px;
 }
   .bg-red-200 {
     color: #fecaca;
@@ -82,97 +94,130 @@
   .bg-yellow-200 {
     color: #fef08a;
   }
+  #reports input:focus {
+  outline: none !important;
+  border: none;
+
+  
+}
+  input[type="date"]::before {
+	color: #999999;
+	content: attr(placeholder);
+  border: none;
+}
+input[type="date"] , input[type="date"]:focus {
+	color: #ffffff;
+  outline: none;
+}
+input[type="date"]:focus,
+input[type="date"]:valid {
+	color: #666666;
+}
+input[type="date"]:focus::before,
+input[type="date"]:valid::before {
+	content: "" !important;
+}
+
+
 </style>
 
 <!--  Markup for an  employee report-->
-<div id="reports">
+<div class="reports-container">
 <!-- Markup for employee profile -->
-  
-  <div class="profile">
+<div class="profile">
 
-    <div class="avatar">
-      <img
-        src="https://gravatar.com/avatar/b8e1fd79796a3a262ad0bb94517658d9?s=200&d=robohash&r=x"
-        alt=""
-      />
-    </div>
-    <div class="profile-info">
-      <div class="username">Khoaiz Ahmmed</div>
-      <div class="role">Employe</div>
-      <div class="profile-details">
-        <div class="email">Khoaiz@mail.com</div>
-        <div class="phone">01534754667</div>
-        <div class="social-icon">
-          <span
-            ><a href=""
-              ><svg
-                width="30"
-                height="30"
-                viewBox="0 0 30 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M17.6667 11.4V15.2667H21.1333C21.4 15.2667 21.5333 15.5333 21.5333 15.8L21 18.3333C21 18.4667 20.7333 18.6 20.6 18.6H17.6667V28.3333H13.6667V18.7333H11.4C11.1333 18.7333 11 18.6 11 18.3333V15.8C11 15.5333 11.1333 15.4 11.4 15.4H13.6667V11C13.6667 8.73333 15.4 7 17.6667 7H21.2667C21.5333 7 21.6667 7.13333 21.6667 7.4V10.6C21.6667 10.8667 21.5333 11 21.2667 11H18.0667C17.8 11 17.6667 11.1333 17.6667 11.4V11.4Z"
-                  stroke="#7B81A2"
-                  stroke-width="2"
-                  stroke-miterlimit="10"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M18.9998 28.3334H10.9998C4.33317 28.3334 1.6665 25.6667 1.6665 19.0001V11.0001C1.6665 4.33341 4.33317 1.66675 10.9998 1.66675H18.9998C25.6665 1.66675 28.3332 4.33341 28.3332 11.0001V19.0001C28.3332 25.6667 25.6665 28.3334 18.9998 28.3334Z"
-                  stroke="#7B81A2"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-          </span>
-          <span
-            ><a href=""
-              ><svg
-                width="30"
-                height="30"
-                viewBox="0 0 30 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M27.7998 12.6001H15.2664V17.5334H22.5998C22.4664 18.7334 21.6664 20.6001 19.9331 21.8001C18.8664 22.6001 17.2664 23.1334 15.2664 23.1334C11.7998 23.1334 8.73311 20.8667 7.66644 17.5334C7.39977 16.7334 7.26644 15.8001 7.26644 14.8667C7.26644 13.9334 7.39977 13.0001 7.66644 12.2001C7.79977 11.9334 7.79977 11.6667 7.93311 11.5334C9.13311 8.73341 11.9331 6.73342 15.2664 6.73342C17.7998 6.73342 19.3998 7.80008 20.4664 8.73342L24.1998 5.00008C21.9331 3.00008 18.8664 1.66675 15.2664 1.66675C10.0664 1.66675 5.53311 4.60008 3.39977 9.00008C2.46644 10.8667 1.93311 12.8667 1.93311 15.0001C1.93311 17.1334 2.46644 19.1334 3.39977 21.0001C5.53311 25.4001 10.0664 28.3334 15.2664 28.3334C18.8664 28.3334 21.9331 27.1334 24.0664 25.1334C26.5998 22.8667 28.0664 19.4001 28.0664 15.2667C28.0664 14.2001 27.9331 13.4001 27.7998 12.6001V12.6001Z"
-                  stroke="#7B81A2"
-                  stroke-width="2"
-                  stroke-miterlimit="10"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-          </span>
-          <span
-            ><a href=""
-              ><svg
-                width="32"
-                height="27"
-                viewBox="0 0 32 27"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M30.6668 1.99998C29.39 2.90062 27.9763 3.58946 26.4802 4.03998C25.6771 3.11666 24.6099 2.46224 23.4229 2.16521C22.2358 1.86819 20.9862 1.94291 19.8429 2.37925C18.6997 2.81559 17.7181 3.59252 17.0308 4.60494C16.3435 5.61736 15.9838 6.81643 16.0002 8.03998V9.37331C13.657 9.43407 11.3352 8.9144 9.24151 7.86057C7.14782 6.80675 5.34725 5.25149 4.00016 3.33331C4.00016 3.33331 -1.33317 15.3333 10.6668 20.6666C7.92087 22.5306 4.64971 23.4652 1.3335 23.3333C13.3335 30 28.0002 23.3333 28.0002 7.99998C27.9989 7.62858 27.9632 7.25811 27.8935 6.89331C29.2543 5.5513 30.2146 3.85693 30.6668 1.99998V1.99998Z"
-                  stroke="#7B81A2"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-          </span>
-        </div>
+  <div class="avatar">
+<% let profileUrl = userInfo.avatar %>
+<% if(profileUrl.search('https://') === -1) {%>
+  <img
+   
+    src="/uploads/avatars/<%= userInfo.avatar%>"
+  />
+
+  <% } else{ %>
+  <img
+    
+    src="<%= userInfo.avatar%>"
+  />
+  <% } %>
+ 
+  </div>
+  <div class="profile-info">
+    <div class="username"><%= userInfo.user_name  %></div>
+    <div class="role"><%= userInfo.user_role == "user" ? "Employee" : "Admin"  %> </div>
+    <div class="profile-details">
+      <div class="email"><%= userInfo.user_mail %> </div>
+      <div class="phone"><%= userInfo.user_phone %> </div>
+      <div class="social-icon">
+        <span
+          ><a href=""
+            ><svg
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M17.6667 11.4V15.2667H21.1333C21.4 15.2667 21.5333 15.5333 21.5333 15.8L21 18.3333C21 18.4667 20.7333 18.6 20.6 18.6H17.6667V28.3333H13.6667V18.7333H11.4C11.1333 18.7333 11 18.6 11 18.3333V15.8C11 15.5333 11.1333 15.4 11.4 15.4H13.6667V11C13.6667 8.73333 15.4 7 17.6667 7H21.2667C21.5333 7 21.6667 7.13333 21.6667 7.4V10.6C21.6667 10.8667 21.5333 11 21.2667 11H18.0667C17.8 11 17.6667 11.1333 17.6667 11.4V11.4Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+              />
+              <path
+                d="M18.9998 28.3334H10.9998C4.33317 28.3334 1.6665 25.6667 1.6665 19.0001V11.0001C1.6665 4.33341 4.33317 1.66675 10.9998 1.66675H18.9998C25.6665 1.66675 28.3332 4.33341 28.3332 11.0001V19.0001C28.3332 25.6667 25.6665 28.3334 18.9998 28.3334Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </span>
+        <span
+          ><a href=""
+            ><svg
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M27.7998 12.6001H15.2664V17.5334H22.5998C22.4664 18.7334 21.6664 20.6001 19.9331 21.8001C18.8664 22.6001 17.2664 23.1334 15.2664 23.1334C11.7998 23.1334 8.73311 20.8667 7.66644 17.5334C7.39977 16.7334 7.26644 15.8001 7.26644 14.8667C7.26644 13.9334 7.39977 13.0001 7.66644 12.2001C7.79977 11.9334 7.79977 11.6667 7.93311 11.5334C9.13311 8.73341 11.9331 6.73342 15.2664 6.73342C17.7998 6.73342 19.3998 7.80008 20.4664 8.73342L24.1998 5.00008C21.9331 3.00008 18.8664 1.66675 15.2664 1.66675C10.0664 1.66675 5.53311 4.60008 3.39977 9.00008C2.46644 10.8667 1.93311 12.8667 1.93311 15.0001C1.93311 17.1334 2.46644 19.1334 3.39977 21.0001C5.53311 25.4001 10.0664 28.3334 15.2664 28.3334C18.8664 28.3334 21.9331 27.1334 24.0664 25.1334C26.5998 22.8667 28.0664 19.4001 28.0664 15.2667C28.0664 14.2001 27.9331 13.4001 27.7998 12.6001V12.6001Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </span>
+        <span
+          ><a href=""
+            ><svg
+              width="32"
+              height="27"
+              viewBox="0 0 32 27"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M30.6668 1.99998C29.39 2.90062 27.9763 3.58946 26.4802 4.03998C25.6771 3.11666 24.6099 2.46224 23.4229 2.16521C22.2358 1.86819 20.9862 1.94291 19.8429 2.37925C18.6997 2.81559 17.7181 3.59252 17.0308 4.60494C16.3435 5.61736 15.9838 6.81643 16.0002 8.03998V9.37331C13.657 9.43407 11.3352 8.9144 9.24151 7.86057C7.14782 6.80675 5.34725 5.25149 4.00016 3.33331C4.00016 3.33331 -1.33317 15.3333 10.6668 20.6666C7.92087 22.5306 4.64971 23.4652 1.3335 23.3333C13.3335 30 28.0002 23.3333 28.0002 7.99998C27.9989 7.62858 27.9632 7.25811 27.8935 6.89331C29.2543 5.5513 30.2146 3.85693 30.6668 1.99998V1.99998Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </span>
       </div>
     </div>
   </div>
-
+</div>
   <!-- Markup for employee work details  -->
 
   <div class="work-details">
@@ -209,7 +254,7 @@
           </tr>
           <tr>
             <td>Work hour:</td>
-            <td><%= weekReportDetails.workHour  + '/' + weekReportDetails.fixedTotalHour  %> hr</td>
+            <td><%= weekReportDetails.workHour%>/<%= weekReportDetails.fixedTotalHour   %> hr</td>
           </tr>
           <tr>
             <td>Avg Work:</td>
@@ -290,10 +335,10 @@
     <h4>Reports</h4>
     <p>Last seven days.</p>
   </div>
-  <div>
-    <input id="dateStart" class="date-input" type="date" onchange="selectStartDate(event)" />
+  <div class="date-range-input-container">
+    <input class="date-input" type="date" id="dateStart" placeholder=" -- / -- / ---- " onchange="selectStartDate(event)" />
     <small class="date-to" >To</small>
-    <input id="dateEnd" class="date-input" type="date" onchange="selectEndDate(event)" />
+    <input class="date-input" type="date" id="dateEnd" placeholder=" -- / -- / ---- " onchange="selectEndDate(event)" />
   </div>
 </div>
 
@@ -466,7 +511,9 @@ function reportShow(reportTableBody,dateRangeReport){
         <td> ${ el.start  } </td>
         <td>${el.end }</td>
         <td>${ el.day === 'Friday' ? 'Off day' : el.type }</td>
+        <td>${ el.fixed_time } hr</td>
         <td>${ el.working_time }</td>
+        
         <td>
           ${ el.type !== 'regular'  ? '00:00:00' : el.time_count }
         </td>
